--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leon Huber</title>
+     <link rel="icon" type="image/png" href="images/pic.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -92,4 +93,5 @@
     </div>
 </body>
 </html>
+
 
