--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leon Huber</title>
-     <link rel="icon" type="image/png" href="images/pic.png">
+     <link rel="icon" type="image/png" href="pic.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -93,5 +93,6 @@
     </div>
 </body>
 </html>
+
 
 
