--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leon Huber – Softwareentwicklung</title>
-    <link rel="icon" type="image/png" href="images/pic.png">
+    <link rel="icon" type="image/png" href="pic.png">
     <meta name="description" content="Portfolio von Leon Huber – moderne App- und Webentwicklung mit React Native, Angular und HTML/CSS.">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -280,3 +280,4 @@
     </script>
 </body>
 </html>
+
